--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -164,10 +164,6 @@
   h3 {
     page-break-after: avoid; } }
 
-@-ms-viewport {
-  width: device-width;
-  zoom: 1.0; }
-
 @viewport {
   width: device-width;
   zoom: 1.0; }
@@ -207,9 +203,7 @@ body {
 
 html {
   background: #fff;
-  -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-          text-size-adjust: 100%; }
+  text-size-adjust: 100%; }
 
 audio,
 canvas,
@@ -288,11 +282,16 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
+@font-face {
+  font-family: 'ApercuRegular';
+  src: url("/assets/fonts/apercu_regular.eot");
+  src: url("/assets/fonts/apercu_regular.eot") format("embedded-opentype"), url("/assets/fonts/apercu_regular.woff") format("woff"), url("/assets/fonts/apercu_regular.ttf") format("truetype"), url("/assets/fonts/apercu_regular.svg#ApercuRegular") format("svg"); }
+
 html {
   font-size: 100%; }
 
 body {
-  font-family: "Merriweather", serif;
+  font-family: 'ApercuRegular';
   font-size: 1rem;
   line-height: 1.5;
   color: #333; }
@@ -381,9 +380,7 @@ blockquote cite {
 .hyphenate {
   overflow-wrap: break-word;
   word-wrap: break-word;
-  -webkit-hyphens: auto;
-      -ms-hyphens: auto;
-          hyphens: auto; }
+  hyphens: auto; }
 
 strong {
   font-weight: bold; }
@@ -464,49 +461,70 @@ figcaption {
   text-align: center;
   border-bottom: 0.0625rem solid #dce8ef; }
 
-::-moz-selection {
-  color: #fff;
-  background: #38a1d6; }
-
 ::selection {
   color: #fff;
   background: #38a1d6; }
 
 .container {
+  padding-top: 2em;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  -ms-flex-pack: justify;
-      justify-content: space-between; }
+  flex-direction: column;
+  justify-content: space-between; }
   .container:after {
     content: " ";
     display: block;
     clear: both; }
+  @media screen and (min-width: 48rem) {
+    .container {
+      flex-direction: row;
+      align-items: center; } }
 
-#header {
-  -ms-flex-positive: 1;
-      flex-grow: 1;
-  max-width: 62em; }
+img {
+  margin-bottom: 2em;
+  max-width: 320px; }
+  @media screen and (min-width: 48rem) {
+    img {
+      max-width: 380px; } }
 
-#footer {
-  padding-top: 1em;
-  max-width: 58em;
-  border-top: 1px solid white; }
+.col-4 {
+  padding: 0 2em; }
+  @media screen and (min-width: 48rem) {
+    .col-4 {
+      width: 33.333%; } }
 
-#footer img {
-  max-width: 20em; }
+@media screen and (min-width: 48rem) {
+  .col-8 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 66.666%; }
+    .col-8 .col-4 {
+      width: 50%; } }
 
-#header,
-#footer {
-  margin: 3em; }
+html {
+  background: white;
+  background-image: url(/assets/img/bg.jpg);
+  background-attachment: fixed;
+  background-position: center center;
+  background-repeat: no-repeat; }
 
-body {
-  background: black; }
+body::after {
+  content: " '";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.6);
+  height: 100%;
+  z-index: -1; }
+  @media screen and (min-width: 48rem) {
+    body::after {
+      display: none; } }
 
 button,
 .btn,
@@ -617,8 +635,7 @@ pre {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow: auto;
-  -moz-tab-size: 2;
-       tab-size: 2; }
+  tab-size: 2; }
 
 code {
   padding: .25rem;
@@ -917,3 +934,5 @@ table thead > tr,
   -webkit-overflow-scrolling: touch; }
   .table--responsive table {
     margin-bottom: .5rem; }
+
+/*# sourceMappingURL=outline.css.map */
